<resources>
    <string name="app_name">Just Java</string>
    <string name="topping_heading">toppings</string>
    <string name="item_one">Whipped cream</string>
    <string name="item_two">Chocolate</string>
    <string name="quantity_heading">quantity</string>
    <string name="minus_sign">-</string>
    <string name="plus_sign">+</string>
    <string name="number_value">0</string>
    <string name="order_button">Order</string>
    <string name="name_entry">Name</string>
    <string name="image_coffeecup">coffeecup</string>
    <string name="item_price">price</string>
    <string name="cost_calculation">&#x20B9; 0.00</string>

</resources>
